Updated README and replaced screenshots